agregamos 3 clases mas

--- a/modelo-de-caja.html
+++ b/modelo-de-caja.html
@@ -7,13 +7,16 @@
     <title>Document</title>
     <style>
         div {
-            width: 20px;
-            height: 20px;
+            width: 20px;  /* Tamaño de la caja en lo ancho*/
+            height: 20px;  /* Tamaño de la caja en alto*/
             background: red;
-            padding: 20px;
-            box-sizing: border-box;
+            padding: 20px;  /* Espacio dentro del contenido
+            entre la caja y el contenido.*/
+            box-sizing: border-box; /* Obliga a cumplir el
+            tamaño que le indiques de width y height */
             border: 1px solid black;
-            margin: 20px;
+            margin: 20px; /* Espacio que existe entre las
+             cajas */
         }
     </style>
 </head>
